--- a/style.css
+++ b/style.css
@@ -1,2 +1,74 @@
+@import url('https://fonts.googleapis.com/css?family=Figtree:wght@600,800&display=swap');
+
+:root {
+    --primary-yellow: hsl(47, 88%, 63%);
+    --neutral-white: hsl(0, 0%, 100%);
+    --neutral-grey: hsl(0, 0%, 50%);
+    --neutral-black: hsl(0, 0%, 7%);
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-color: var(--primary-yellow);
+    font-family: 'Figtree';
+}
+
+.card {
+    border: 1px solid black;
+    width: 17vw;
+    margin: 20vh auto 0;
+    background-color: var(--neutral-white);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 1rem;
+    border-radius: 20px;
+    padding: 1.5rem;
+    box-shadow: 5px 5px var(--neutral-black);
+}
+
+.card-img img {
+    object-fit: contain;
+    width: 100%;
+    border-radius: 20px;
+}
+
+.card-tag {
+    background-color: var(--primary-yellow);
+    width: fit-content;
+    padding: .5rem;
+    border-radius: 5px;
+    font-weight: 700;
+    line-height: .75rem;
+}
+
+.card-body {
+    color: var(--neutral-grey)
+}
+
+.card-footer {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+}
+
+.card-footer img {
+    width: 2rem;    
+}
+
+.card-footer p {
+    font-weight: 700;
+}
+
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
